# python-canada

./: .gitignore  Makefile  README.md  pyproject.toml
canada/: __init__.py  canada.py  provinces.py
