[build-system]
requires = ["setuptools"]

[project]
name = "canada"
description = "Canadian provinces and territories"
readme = "README.md"
urls.Homepage = "https://github.com/jasmine-energy/python-canada/"
urls."Issue tracker" = "https://github.com/jasmine-energy/python-canada/issues"
requires-python = ">=3.9"
dynamic = ["version"]
authors = [
    { name = "Vince Enachescu", email = "vince@jasmine.energy" }
    { name = "", email = "" }
    { name = " ", email = "" }
]
classifiers = [
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12"
]
license = { file = "LICENSE"}

dependencies = ['jellyfish']

[project.optional-dependencies]
dev = ['flake8', 'black', 'pytest', 'pytz']

[tool.setuptools.dynamic]
version = { attr = "canada.version.__version__" }

[tool.black]
line-length = 120
target-version = ['py39', 'py310', 'py311', 'py312']
include = '\.pyi?$'