[build-system]
requires = ["poetry-core>=1.2.0", "wheel",]
build-backend = "poetry.core.masonry.api"

[tool.poetry.dependencies]
python = "^3.9"
jellyfish = "^1.1.0"
ruff = "^0.5.5"

[tool.poetry]
name = "canada"
description = "Canadian provinces and territories"
readme = "README.md"
version = "0.0.1"
homepage = "https://github.com/jasmine-energy/python-canada/"
repository = "https://github.com/jasmine-energy/python-canada/"
packages = [{include = "canada"}]
authors = [
    "Vince Enachescu <vince@jasmine.energy>",
]
classifiers = [
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12"
]

[tool.poetry.group.dev.dependencies]
ruff = "*"

[tool.poetry.group.test.dependencies]
coverage = "*"
pytest = "*"
pytest-cov = "*"